chore: cleanup spaces

--- a/main.tex
+++ b/main.tex
@@ -53,24 +53,24 @@
 \newcommand{\resumeSubheading}[4]{
   \vspace{-2pt}
 \item
-  \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+  \begin{tabular*}{0.98\textwidth}[t]{l@{\extracolsep{\fill}}r}
     \textbf{#1} & #2 \\
     \textit{\small#3} & \textit{\small #4} \\
-  \end{tabular*}\vspace{-7pt}
+  \end{tabular*}\vspace{-6pt}
 }
 
 \newcommand{\resumeSubSubheading}[2]{
 \item
-  \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+  \begin{tabular*}{0.98\textwidth}{l@{\extracolsep{\fill}}r}
     \textit{\small#1} & \textit{\small #2} \\
-  \end{tabular*}\vspace{-7pt}
+  \end{tabular*}\vspace{-6pt}
 }
 
 \newcommand{\resumeProjectHeading}[2]{
 \item
   \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
     \small#1 & #2 \\
-  \end{tabular*}\vspace{-7pt}
+  \end{tabular*}\vspace{-6pt}
 }
 
 \newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-4pt}}
@@ -84,7 +84,7 @@
 \newcommand{\resumeItemListStart}{
 \begin{itemize}}
     \newcommand{\resumeItemListEnd}{
-\end{itemize}\vspace{-5pt}}
+\end{itemize}\vspace{-4pt}}
 
 %-------------------------------------------
 %%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -94,17 +94,17 @@
 %----------HEADING----------
 \begin{center}
   \textbf{\Huge Leonardo Razovic} \\ \vspace{8pt}
-  \small (+41) 0774297473 $|$ \href{mailto:lrazovic@gmail.com}{\underline{lrazovic@gmail.com}} $|$ \\
+  \small (+41) 0774297473 $|$ \href{mailto:lrazovic@gmail.com}{\underline{lrazovic@gmail.com}} $|$ {Zug, 6300}\\
   \vspace{2pt}
-  \href{https://linkedin.com/in/leonardo-razovic/}{\underline{linkedin.com/in/leonardo-razovic}} $|$
   \href{https://github.com/lrazovic}{\underline{github.com/lrazovic}} $|$
-  \href{https://x.com/lrazovic}{\underline{x.com/lrazovic}}
+  \href{https://x.com/lrazovic}{\underline{x.com/lrazovic}} $|$
+  \href{https://linkedin.com/in/leonardo-razovic/}{\underline{linkedin.com/in/leonardo-razovic}}
 \end{center}
 
 %-----------SUMMARY-----------
 \section{Professional Summary}
 \small{
-  Software Engineer specialized in Rust-based blockchain systems. As CTO at Polimec, scaled a decentralized funding protocol handling token sales. Experienced in low-level, no-std Rust codebases, REST APIs, microservices, and agile teams, with a passion for crypto-native solutions.
+  Software Engineer specialized in Rust-based blockchain systems. As Polimec Foundation CTO, scaled a decentralized funding protocol handling token sales. Experienced in low-level, no-std Rust codebases, REST APIs, microservices, and agile teams, with a passion for crypto-native solutions.
 }
 
 %-----------EDUCATION-----------
@@ -112,9 +112,9 @@
 \resumeSubHeadingListStart
 \resumeSubheading
 {La Sapienza University}{Rome, Italy}
-{M.Sc. in Engineering in Computer Science}{2020 -- 2023}
+{Master of Science in Engineering in Computer Science}{2020 -- 2023}
 \resumeSubSubheading
-{B.Sc. in Engineering in Computer Science}{2016 -- 2020}
+{Bachelor of Science in Computer Engineering}{2016 -- 2020}
 \resumeSubHeadingListEnd
 
 %-----------CERTIFICATIONS-----------
@@ -122,7 +122,10 @@
 \resumeSubHeadingListStart
 \resumeSubheading
 {Polkadot Blockchain Academy}{Cambridge, United Kingdom}
-{5-week intensive course on blockchain development by Parity}{Jul. 2023 -- Aug. 2023}
+{Intensive 5-week blockchain development program by Parity Technologies}{Jul. 2023 -- Aug. 2023}
+\resumeSubheading
+{Google Technologies Workshop for Cloud and Web Development}{Rome, Italy}
+{Winner of 4th edition workshop for startup development skills}{Mar. 2019 -- Jun. 2019}
 \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------
@@ -134,16 +137,17 @@
 {Polimec Foundation}{Zug, Switzerland}
 \resumeItemListStart
 \resumeItem{Scaled Polimec from idea to production-ready decentralized funding protocol, leading a 5+ developer team to deliver compliant, high-throughput systems for token sales and staking}
+\resumeItem{Served as technical intermediary between shareholders and development team, translating business requirements and stakeholder requests into actionable technical solutions and implementation roadmaps}
 \resumeItem{Architected blockchain infrastructure using Rust and Polkadot SDK, implementing custom pallets for fundraising, inflation models, and governance with SOLID principles and design patterns for maintainability}
-\resumeItem{Engineered features like vesting and multisig wallets, optimizing for constrained environments; troubleshot and unit-tested code to ensure production-grade reliability in high-value crypto environments}
+\resumeItem{Integrated Deloitte and Sumsub KYC API for compliance, handling user verification in microservices setup}
 \resumeItemListEnd
 
 \resumeSubheading
 {Teaching Assistant}{Dec. 2024 -- Feb. 2025}
 {Polkadot Blockchain Academy X}{Remote}
 \resumeItemListStart
-\resumeItem{Taught blockchain and distributed systems to 100+ participants, communicating complex concepts like scalability and interoperability in clear, actionable ways}
-\resumeItem{Mentored on practical development with Polkadot SDK and Substrate, guiding 20+ projects to testnet deployment while emphasizing proactive troubleshooting and best practices}
+\resumeItem{Taught blockchain and distributed systems to 100+ participants, communicating concepts like scalability and interoperability in clear, actionable ways}
+\resumeItem{Mentored on practical development with Polkadot SDK, guiding 20+ projects to testnet deployment while emphasizing proactive troubleshooting and best practices}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
@@ -153,17 +157,17 @@
 \resumeSubHeadingListStart
 
 \resumeProjectHeading
-{\textbf{Polimec Runtime} $|$ \emph{Rust, Polkadot SDK, Substrate}}{2022 -- Present}
+{\textbf{Polimec Runtime} $|$ \emph{Rust, Polkadot SDK}}{2022 -- Present}
 \resumeItemListStart
-\resumeItem{Built blockchain for regulatory compliant Web3 funding, implementing on-chain logic for token sales and staking rewards—handling 500+ simulated transactions/minute with low-defect, SOLID-compliant code}
+\resumeItem{Built blockchain for regulatory compliant Web3 funding in highly constrained runtime environment, implementing complex on-chain logic for token sales and staking while optimizing for memory efficiency and deterministic execution}
 \resumeItem{Designed custom pallets for vesting and governance, applying design patterns for scalable, maintainable systems}
 \resumeItemListEnd
 
 \resumeProjectHeading
-{\textbf{Polimec KYC API} $|$ \emph{TypeScript, Hono, Cloudflare Workers, SQL, REST APIs}}{2023 -- Present}
+{\textbf{Polimec KYC API} $|$ \emph{TypeScript, Hono, Cloudflare, SQL, REST APIs}}{2023 -- Present}
 \resumeItemListStart
 \resumeItem{Developed serverless microservices middleware for KYC/AML compliance, integrating Sumsub for user verification and IPFS for policy storage—ensuring regulatory adherence for financial services}
-\resumeItem{Implemented nonce-based signature verification for off-chain and on-chain user authentication via JWT auth (Ed25519), and SQL database operations for account linking}
+\resumeItem{Implemented nonce-based signature verification for off-chain and on-chain user authentication via JWT (Ed25519), and SQL database operations for account linking}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
@@ -173,8 +177,8 @@
 \begin{itemize}[leftmargin=0.15in, label={}]
     \small{
     \item{
-        \textbf{Languages}{: Rust, TypeScript, JavaScript} \\
-        \textbf{Frameworks \& Tools}{: Polkadot SDK, Hono, Drizzle ORM (SQL), Git, Docker, Cloudflare (Workers, KV, D1)} \\
+        \textbf{Languages}{: Rust, TypeScript, JavaScript, C, Java and Zig} \\
+        \textbf{Frameworks \& Tools}{: Polkadot SDK, Hono, SQL, Git, Cloudflare (Workers, KV, D1), React, Next.js, NX} \\
         \textbf{APIs \& Protocols}{: REST APIs, GraphQL, JWT} \\
         \textbf{Best Practices}{: Design Patterns, SOLID Principles, Unit Testing, Agile Development} \\
     }}
