feat: clarify metrics

--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@
 %-----------PROFESSIONAL SUMMARY-----------
 \section{Professional Summary}
 \small{
-  Blockchain CTO with 3+ years leading Rust-based Web3 infrastructure development. Built production blockchain systems processing 10,000+ transactions daily, integrated enterprise KYC solutions serving 5,000+ users, and led cross-functional teams of 5+ engineers. Expert in Rust systems programming, Polkadot SDK, microservices architecture, and regulatory-compliant DeFi protocols. Seeking senior engineering roles in blockchain, distributed systems, or high-performance Rust development.
+  Blockchain CTO with 3+ years leading Rust-based Web3 infrastructure development. Built production blockchain systems achieving peak processing of 10,000+ transactions daily, integrated enterprise KYC solutions serving up to 5,000+ users, and led cross-functional teams of 5+ engineers. Expert in Rust systems programming, Polkadot SDK, microservices architecture, and regulatory-compliant DeFi protocols. Seeking senior engineering roles in blockchain, distributed systems, or high-performance Rust development.
 }
 
 %-----------EXPERIENCE-----------
@@ -115,11 +115,12 @@
 {Chief Technology Officer}{Sep. 2022 -- Sep. 2025}
 {Polimec Foundation}{Zug, Switzerland}
 \resumeItemListStart
-\resumeItem{Led technical strategy and execution, scaling from concept to production-ready protocol handling 10,000+ daily transactions with 99.9\% uptime}
-\resumeItem{Architected and implemented core blockchain runtime in Rust (no-std), and reducing transaction processing time by 25\% through custom pallet development}
-\resumeItem{Managed and mentored team of 5+ engineers, establishing agile development practices that improved delivery velocity by 40\% and reduced bug rates by 60\% through code review processes and CI/CD pipelines}
-\resumeItem{Designed microservices architecture integrating Deloitte and Sumsub KYC APIs, enabling regulatory compliance for 5,000+ verified users across 60+ countries with sub-second response times}
-\resumeItem{Reduced infrastructure costs by 45\% through serverless architecture migration using Cloudflare Workers and edge computing, while maintaining enterprise-grade security standards}
+\resumeItem{Led technical strategy and execution, scaling from concept to production-ready protocol achieving peak 10,000+ daily transactions with 99.9\% uptime}
+\resumeItem{Architected and implemented core blockchain runtime in Rust (no-std), reducing transaction processing time by 25\% through custom pallet development}
+\resumeItem{Managed and mentored team of 5+ engineers, establishing agile practices that improved delivery velocity by 40\% and reduced bug rates by 60\% via code reviews and CI/CD pipelines}
+\resumeItem{Designed microservices architecture integrating Deloitte and Sumsub KYC APIs, enabling regulatory compliance for up to 5,000+ verified users across 60+ countries with sub-second response times}
+\resumeItem{Reduced infrastructure costs by 45\% through serverless migration using Cloudflare Workers and edge computing, maintaining enterprise-grade security}
+\resumeItem{Oversaw orderly wind-down of operations, ensuring seamless asset withdrawals for users and open-sourcing codebase for ecosystem benefit}
 \resumeItemListEnd
 
 \resumeSubheading
@@ -147,17 +148,17 @@
 \resumeSubHeadingListStart
 
 \resumeProjectHeading
-{\textbf{Polimec Blockchain} | \emph{Rust, Substrate, Polkadot SDK, WebAssembly}}{2022 -- Present}
+{\textbf{Polimec Blockchain} | \emph{Rust, Substrate, Polkadot SDK, WebAssembly}}{2022 -- 2025}
 \resumeItemListStart
 \resumeItem{Engineered production L1 blockchain runtime in no-std Rust, implementing custom pallets for token sales, vesting schedules, and on-chain governance}
-\resumeItem{Optimized runtime performance achieving 6-second block times and 5,000 TPS throughput while maintaining deterministic execution and consensus safety}
+\resumeItem{Optimized runtime performance achieving 6-second block times and peak 5,000 TPS throughput while maintaining deterministic execution and consensus safety}
 \resumeItem{Implemented comprehensive test suite and fuzz testing, preventing critical vulnerabilities in financial logic}
 \resumeItemListEnd
 
 \resumeProjectHeading
-{\textbf{Enterprise KYC/AML Microservices Platform} | \emph{TypeScript, Cloudflare Workers, PostgreSQL, REST APIs}}{2023 -- Present}
+{\textbf{Enterprise KYC/AML Microservices Platform} | \emph{TypeScript, Cloudflare Workers, PostgreSQL, REST APIs}}{2023 -- 2025}
 \resumeItemListStart
-\resumeItem{Built serverless API gateway processing 50,000+ KYC verification requests monthly with 99.95\% availability and sub-200ms p95 latency}
+\resumeItem{Built serverless API gateway processing peak 50,000+ KYC verification requests monthly with 99.95\% availability and sub-200ms p95 latency}
 \resumeItem{Implemented cryptographic signature verification using Ed25519 and JWT authentication, securing user data for regulatory compliance across EU and US jurisdictions}
 \resumeItem{Designed event-driven architecture with IPFS integration for immutable audit trails, passing external security audits with zero critical findings}
 \resumeItemListEnd
@@ -166,7 +167,7 @@
 {\textbf{Open Source Contributions} | \emph{Rust, Blockchain, Developer Tools}}{Ongoing}
 \resumeItemListStart
 \resumeItem{Active contributor to Polkadot and Rust ecosystem, including performance improvements to core libraries}
-\resumeItem{Maintained popular Rust crates with 10,000+ downloads, focusing on blockchain tooling and developer experience}
+\resumeItem{Maintained Rust crates, focusing on blockchain tooling and no-std environments}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
