chore: pdf release 0.2

--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@
 %----------HEADING----------
 \begin{center}
   \textbf{\Huge Leonardo Razovic} \\ \vspace{8pt}
-  \small (+41) 0774297473 | \href{mailto:lrazovic@gmail.com}{\underline{lrazovic@gmail.com}} | Zug, Switzerland 6300\\
+  \small (+41) 0774297473 | \href{mailto:lrazovic@gmail.com}{\underline{lrazovic@gmail.com}} | Zug, Switzerland\\
   \vspace{2pt}
   \href{https://github.com/lrazovic}{\underline{github.com/lrazovic}} |
   \href{https://x.com/lrazovic}{\underline{x.com/lrazovic}} |
@@ -104,7 +104,7 @@
 %-----------PROFESSIONAL SUMMARY-----------
 \section{Professional Summary}
 \small{
-  Blockchain CTO with 3+ years leading Rust-based Web3 infrastructure development. Built production blockchain systems achieving peak processing of 10,000+ transactions daily, integrated enterprise KYC solutions serving up to 5,000+ users, and led cross-functional teams of 5+ engineers. Expert in Rust systems programming, Polkadot SDK, microservices architecture, and regulatory-compliant DeFi protocols. Seeking senior engineering roles in blockchain, distributed systems, or high-performance Rust development.
+  Blockchain CTO with 3+ years leading Rust-based Web3 L1 infrastructure development. Built production blockchain systems achieving peak processing of 10,000+ transactions daily, integrated enterprise KYC solutions serving up to 5,000+ users, and led cross-functional teams of 5+ engineers. Expert in Rust systems programming, Polkadot SDK, microservices architecture, and regulatory-compliant DeFi protocols. Seeking senior engineering roles in blockchain, distributed systems, or high-performance Rust development.
 }
 
 %-----------EXPERIENCE-----------
@@ -117,7 +117,6 @@
 \resumeItemListStart
 \resumeItem{Led technical strategy and execution, scaling from concept to production-ready protocol achieving peak 10,000+ daily transactions with 99.9\% uptime}
 \resumeItem{Architected and implemented core blockchain runtime in Rust (no-std), reducing transaction processing time by 25\% through custom pallet development}
-\resumeItem{Managed and mentored team of 5+ engineers, establishing agile practices that improved delivery velocity by 40\% and reduced bug rates by 60\% via code reviews and CI/CD pipelines}
 \resumeItem{Designed microservices architecture integrating Deloitte and Sumsub KYC APIs, enabling regulatory compliance for up to 5,000+ verified users across 60+ countries with sub-second response times}
 \resumeItem{Reduced infrastructure costs by 45\% through serverless migration using Cloudflare Workers and edge computing, maintaining enterprise-grade security}
 \resumeItem{Oversaw orderly wind-down of operations, ensuring seamless asset withdrawals for users and open-sourcing codebase for ecosystem benefit}
@@ -156,7 +155,7 @@
 \resumeItemListEnd
 
 \resumeProjectHeading
-{\textbf{Enterprise KYC/AML Microservices Platform} | \emph{TypeScript, Cloudflare Workers, PostgreSQL, REST APIs}}{2023 -- 2025}
+{\textbf{Enterprise KYC/AML Microservices Platform} | \emph{TypeScript, Cloudflare Workers, REST APIs}}{2023 -- 2025}
 \resumeItemListStart
 \resumeItem{Built serverless API gateway processing peak 50,000+ KYC verification requests monthly with 99.95\% availability and sub-200ms p95 latency}
 \resumeItem{Implemented cryptographic signature verification using Ed25519 and JWT authentication, securing user data for regulatory compliance across EU and US jurisdictions}
@@ -177,7 +176,7 @@
 \begin{itemize}[leftmargin=0.15in, label={}]
     \small{
     \item{
-        \textbf{Programming Languages}{: Rust (Expert), TypeScript/JavaScript (Advanced), C (Intermediate), Java, Zig} \\
+        \textbf{Programming Languages}{: Rust (Expert), TypeScript/JavaScript (Advanced), C , Java, Zig (for fun)} \\
         \textbf{Blockchain \& Web3}{: Substrate/Polkadot SDK, Smart Contracts, DeFi Protocols, Consensus Algorithms, Cryptography} \\
         \textbf{Backend \& Infrastructure}{: Microservices, REST APIs, GraphQL, PostgreSQL, Redis, Docker, CI/CD} \\
         \textbf{Cloud \& DevOps}{: AWS, Cloudflare Workers, Serverless Architecture, Monitoring (Grafana, Prometheus)} \\
