--- a/main.tex
+++ b/main.tex
@@ -116,9 +116,9 @@
 {Polimec Foundation}{Zug, Switzerland}
 \resumeItemListStart
 \resumeItem{Led technical strategy and execution, scaling from concept to production-ready protocol achieving peak 10,000+ daily transactions with 99.9\% uptime}
+\resumeItem{Hands-on coding of core blockchain runtime in no-std Rust, TypeScript API layers, and React/Next.js codebases, contributing significantly to the codebase while balancing leadership duties}
 \resumeItem{Architected and implemented core blockchain runtime in Rust (no-std), reducing transaction processing time by 25\% through custom pallet development}
-\resumeItem{Designed microservices architecture integrating Deloitte and Sumsub KYC APIs, enabling regulatory compliance for up to 5,000+ verified users across 60+ countries with sub-second response times}
-\resumeItem{Reduced infrastructure costs by 45\% through serverless migration using Cloudflare Workers and edge computing, maintaining enterprise-grade security}
+\resumeItem{Designed serverless microservices architecture integrating Deloitte and Sumsub KYC APIs, enabling regulatory compliance for up to 5,000+ verified users across 60+ countries with sub-second response times}
 \resumeItem{Oversaw orderly wind-down of operations, ensuring seamless asset withdrawals for users and open-sourcing codebase for ecosystem benefit}
 \resumeItemListEnd
 
@@ -176,11 +176,13 @@
 \begin{itemize}[leftmargin=0.15in, label={}]
     \small{
     \item{
-        \textbf{Programming Languages}{: Rust (Expert), TypeScript/JavaScript (Advanced), C , Java, Zig (for fun)} \\
-        \textbf{Blockchain \& Web3}{: Substrate/Polkadot SDK, Smart Contracts, DeFi Protocols, Consensus Algorithms, Cryptography} \\
-        \textbf{Backend \& Infrastructure}{: Microservices, REST APIs, GraphQL, PostgreSQL, Redis, Docker, CI/CD} \\
-        \textbf{Cloud \& DevOps}{: AWS, Cloudflare Workers, Serverless Architecture, Monitoring (Grafana, Prometheus)} \\
-        \textbf{Methodologies}{: Agile/Scrum, Test-Driven Development, Design Patterns, SOLID and DRY Principles} \\
+        \textbf{Programming Languages:} Rust, TypeScript, JavaScript, Python, C, Java, Zig \\
+        \textbf{Frontend Technologies:} React, Next.js, Tailwind CSS, Redux \\
+        \textbf{Blockchain and Web3:} Polkadot SDK, Smart Contracts, DeFi Protocols, Consensus Algorithms, Cryptography \\
+        \textbf{Backend and Databases:} Node.js, REST APIs, GraphQL, PostgreSQL, Redis, Microservices Architecture \\
+        \textbf{Cloud and DevOps:} AWS, Google Cloud Platform, Cloudflare Workers, Docker, CI/CD, GitHub Actions, Terraform \\
+        \textbf{Tools and Methodologies:} Git, Linux, Agile, Scrum, Test-Driven Development, SOLID Principles, Design Patterns \\
+
     }}
 \end{itemize}
 
